<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="25dp"
    app:cardElevation="10dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
                android:id="@+id/vinoImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vino"/>

        <TextView
            android:id="@+id/vinoTitle"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/vinoTitle"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vinoImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.113"
            />

        <TextView
            android:id="@+id/vinoDescription"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp"
            android:text="@string/vinoDescripcion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vinoImage"
            app:layout_constraintTop_toBottomOf="@+id/vinoTitle" />

        <ImageView
            android:id="@+id/trashButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/vinoTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_garbage"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/vinoPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/vinoPrice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/vinoImage"
            android:textSize="20sp"
            android:textStyle="bold"/>



    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>