<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CameraVinumActivity"
        android:background="@color/fondo">

    <TextView
            android:id="@+id/textViewClickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/click_photo_vinum"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageViewPhotoVinumPpal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/imageViewPhotoVinumPpal"
            android:layout_width="235dp"
            android:layout_height="245dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fotovinocamera"
            android:contentDescription="TODO"/>

    <TextView
            android:id="@+id/textViewInstruccionesPhotoVinum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/toma_tu_foto_si_te_gusta_a_ade_tu_vinum"
            android:textColor="#673147"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPhotoVinumPpal"/>

    <CheckBox
            android:id="@+id/checkBoxDifusionPhotoVinum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:clickable="false"
            android:onClick="checkPermisoAuth"
            android:text="Acepto difusión pública de mi foto Vinum"
            android:textColor="#673147"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
            android:id="@+id/imageButtonCameraVinum"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="false"
            android:background="@drawable/buttoncamera_background"
            android:onClick="startPhotoCamera"
            app:layout_constraintBottom_toTopOf="@+id/buttonAgregarPhotoVinum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera"/>

    <Button
            android:id="@+id/buttonAgregarPhotoVinum"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttongeneral_background"
            android:onClick="AgregarPhotoButton"
            android:text="@string/a_adir_vino"
            android:textColor="@color/fondo"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxDifusionPhotoVinum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>